processed/jira/txt/LU/LU-9302.txt
Key:        LU-9302
Summary:    Lustre-client-dkms 2.9.0 fails to build with MLNX_OFED_LINUX-4.0-1.0.1.0-rhel7.3-x86_64
Link:       https://jira.whamcloud.com/browse/LU-9302
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Duplicate
Assignee:   WC Triage
Reporter:   Guilherme James De Angelis Fachini
Created:    Thu, 6 Apr 2017 14:56:20 +0000
Updated:    Thu, 6 Apr 2017 15:08:26 +0000
Resolved:   Thu, 6 Apr 2017 15:08:26 +0000

--- Environment ---
MLNX_OFED_LINUX-4.0-1.0.1.0-rhel7.3-x86_64

InfiniBand

CentOS Linux release 7.3.1611 (Core)

--- Description ---
Build lustre-client with ofa kernel from Mellanox 4.0-1.0.1.0 fails due to missing symbols:

---------------------------------------------------------------------------------------

/var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd.c: In function 'kiblnd_hdev_setup_mrs':

/var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd.c:2555:2: error: implicit declaration of function 'ib_get_dma_mr' [-Werror=implicit-function-declaration]

  mr = ib_get_dma_mr(hdev->ibh_pd, acflags);

  ^

/var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd.c:2555:5: error: assignment makes pointer from integer without a cast [-Werror]

  mr = ib_get_dma_mr(hdev->ibh_pd, acflags);

     ^

/var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd.c: In function 'kiblnd_dev_failover':

/var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd.c:2702:38: error: macro "ib_alloc_pd" requires 2 arguments, but only 1 given

         pd = ib_alloc_pd(cmid->device);

                                      ^

/var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd.c:2702:14: error: 'ib_alloc_pd' undeclared (first use in this function)

         pd = ib_alloc_pd(cmid->device);

              ^

/var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd.c:2702:14: note: each undeclared identifier is reported only once for each function it appears in

cc1: all warnings being treated as errors

  CC [M]  /var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd_cb.o

make[7]: *** [/var/lib/dkms/lustre-client/2.9.0/build/lnet/klnds/o2iblnd/o2iblnd.o] Error 1

---------------------------------------------------------------------------------------

I built with: --with-o2ib=/usr/src/ofa_kernel/default/

This symbols have been dropped from that version so Lustre kernel modules are not compatible to the curretn mellanox version.

I tried with MLNX_OFED_LINUX-3.4-2.0.1.0-redhat7.2-x86_64, and the build went fine.

--- Comment (pjones, Thu, 6 Apr 2017 15:08:26 +0000) ---
This should be fixed in the 2.10 release - MOFED 4.0 did not exist when the 2.9 release came out. More details are in LU-9026
